<resources>
    <string name="app_name">MyClockApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="timers">Timers</string>
    <string name="alarms">Alarms</string>
    <string name="clock">Clock</string>
    <string name="style">Style</string>
    <string name="display_time_seconds">Display time with seconds</string>
    <string name="auto_home_clock">Automatic Home Clock</string>
    <string name="change_date_time">Change date and time</string>
    <string name="intelligent_voice_broadcast">Intelligent voice broadcast</string>
    <string name="home_time_zone">Home time zone</string>
    <string name="key_clock_style">clock_style</string>
    <string name="key_display_seconds">display_seconds</string>
    <string name="key_automatic_clock">automaticClock</string>
    <string name="key_silence_after">silence_after</string>
    <string name="silence_after">Silence After</string>
    <string name="key_snooze_length">snooze_length</string>
    <string name="snooze_length">Snooze Length</string>
    <string name="key_alarm_volume">alarm_volume</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="key_volume_buttons">volume_butons</string>
    <string name="volume_buttons">Volume Buttons</string>
    <string name="start_week_on">Start week on</string>
    <string name="key_start_week_on">start_week_on</string>
    <string name="key_home_time_zone">home_time_zone</string>
    <string name="key_set_day_time">set_date_and_time</string>
    <string name="key_last_position">set_last_position</string>
    <string name="ringtone">Ringtone</string>
    <string name="key_timer_ringtone">key_timer_ringtone</string>
    <string name="automatic_home_time_summary">While travelling in an area where the ime is different, add a clock for home</string>

    <string-array name="clock_style_entries">
        <item>Analog</item>
        <item>Digital</item>
    </string-array>

    <string-array name="clock_style_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="silence_after_entries">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>Never stop</item>
    </string-array>

    <string-array name="silence_after_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>-1</item>
    </string-array>

    <string-array name="snooze_length_entries">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>6 minutes</item>
        <item>7 minutes</item>
        <item>8 minutes</item>
        <item>9 minutes</item>
        <item>10 minutes</item>
        <item>11 minutes</item>
        <item>12 minutes</item>
        <item>13 minutes</item>
        <item>14 minutes</item>
        <item>15 minutes</item>
        <item>16 minutes</item>
        <item>17 minutes</item>
        <item>18 minutes</item>
        <item>19 minutes</item>
        <item>20 minutes</item>
        <item>21 minutes</item>
        <item>22 minutes</item>
        <item>23 minutes</item>
        <item>24 minutes</item>
        <item>25 minutes</item>
        <item>26 minutes</item>
        <item>27 minutes</item>
        <item>28 minutes</item>
        <item>29 minutes</item>
        <item>30 minutes</item>
    </string-array>

    <string-array name="snooze_length_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="volume_buttons_entries">
        <item>Snooze</item>
        <item>Dismiss</item>
        <item>Control volume</item>
    </string-array>

    <string-array name="volume_buttons_values">
        <item>0</item>
        <item>1</item>
        <item>-1</item>
    </string-array>

    <string-array name="start_week_day_entries">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>

    <string-array name="start_week_day_values">
        <item>0</item>
        <item>1</item>
        <item>-1</item>
    </string-array>
</resources>